# jetbrains_application_lldb

./: CMakeLists.txt  README.md  export_to_archive_and_push_to_repo.sh  invocation_test.sh  invocation_test_proper_output.txt  measure_perf.sh
src/: dwarf.h  dwarf_parser.cpp  dwarf_parser.h  elf_parser.cpp  elf_parser.h  gwatch  gwatch.cpp  test.cpp  types.h  watcher.cpp  watcher.h
test_programs/: test_int_decrementation  test_int_decrementation.cpp  test_int_incrementation  test_int_incrementation.cpp  test_perf.cpp
tests/: dwarf_parser_tests.cpp  elf_parser_tests.cpp  invocation_tests.cpp  test.cpp  watcher_tests.cpp
